Fix contrast issue in code snippets

--- a/css/code-light.css
+++ b/css/code-light.css
@@ -15,7 +15,7 @@
 .token.important,
 .token.keyword,
 .token.symbol {
-  color: #7c4dff;
+  color: #6a42db;
 }
 
 .token.attr-name,
